<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
  <data>
    <variable
        name="udata"
        type="com.todropfu.ProfileFragment.UserData"/>
  </data>
  <android.support.constraint.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      tools:context="com.todropfu.BillFragment">

    <TextView
        android:id="@+id/textMyInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_info"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="start"
        android:textSize="17sp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:font='@{ "nbg_normal" }'/>

    <LinearLayout
        android:id="@+id/userNameContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/textMyInfo"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="10dp"
        android:background="@color/md_white_1000"
        android:padding="15dp">
      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/user_name"
          android:textSize="10sp"
          android:textColor="@color/colorPrimary"
          android:layout_marginBottom="5dp"
          />
      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@{udata.name}"
          tools:text="두부넘버원"
          android:textSize="16sp"
          android:textColor="@color/md_black_1000"
          />
    </LinearLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/userHomeContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/userNameContainer"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@color/md_white_1000"
        android:padding="15dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

      <TextView
          android:id="@+id/textHome"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/home_address"
          android:textSize="10sp"
          android:textColor="@color/colorPrimary"
          android:layout_marginBottom="5dp"
          app:layout_constraintTop_toTopOf="parent"/>
      <TextView
          android:id="@+id/textHomeDesc"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@{udata.home}"
          tools:text="서울특별시 용산구 청파동3가 원효로97길 33-4"
          android:layout_marginTop="5dp"
          android:textSize="15sp"
          android:textColor="@color/md_black_1000"
          app:layout_constraintTop_toBottomOf="@id/textHome"
          app:layout_constraintBottom_toBottomOf="parent"
          />
      <LinearLayout
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          app:layout_constraintLeft_toRightOf="@id/textHomeDesc"
          app:layout_constraintRight_toRightOf="parent"
          app:layout_constraintTop_toTopOf="@id/textHomeDesc"
          app:layout_constraintBottom_toBottomOf="@id/textHomeDesc"
          android:baselineAligned="true">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="10sp"
            android:text="@string/change_adress"
            android:textColor="@color/colorPrimary"
            android:layout_marginRight="4dp"
            android:layout_marginEnd="4dp"
            android:gravity="center"/>
        <ImageView
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:src="@drawable/ic_signup_next"
            android:scaleType="fitXY"/>
      </LinearLayout>
    </android.support.constraint.ConstraintLayout>

    <LinearLayout
        android:id="@+id/btnAddCard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/userHomeContainer"
        app:layout_constraintRight_toRightOf="parent"
        android:orientation="horizontal"
        android:background="@drawable/btn_bg_addcard"
        android:paddingRight="25dp"
        android:paddingLeft="25dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:gravity="center"
        android:layout_marginTop="25dp"
        android:layout_marginRight="15dp"
        android:layout_marginEnd="15dp">
      <ImageView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content" 
          android:src="@drawable/ic_card_add"
          android:layout_marginRight="4dp"
          android:layout_marginEnd="4dp"/>
      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/add_card"
          android:textSize="12sp"
          android:textColor="@color/md_white_1000"
          android:font= '@{ "nbg_bold" }'
          android:layout_marginRight="5dp"
          android:layout_marginEnd="5dp"/>
    </LinearLayout>
  </android.support.constraint.ConstraintLayout>
</layout>
