<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="zdata"
            type="com.todropfu.MarketZoomActivity.MarketZoomData"/>
    </data>
    <android.support.v7.widget.CardView
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="190dp"
        app:cardCornerRadius="2dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="20dp">
        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/imzImage"
                android:layout_width="150dp"
                android:layout_height="0dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:foreground="#59000000"/>

            <android.support.constraint.ConstraintLayout
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@id/imzImage"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_margin="18dp">
                <TextView
                    android:id="@+id/imzTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{zdata.title}"
                    tools:text="트럭마을산 두부"
                    app:layout_constraintLeft_toRightOf="parent"
                    android:textSize="17sp"
                    android:textColor="@color/md_black_1000"
                    android:font='@{"nbg_bold"}'
                    />
                <TextView
                    android:id="@+id/imzContent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:text="@{zdata.content}"
                    tools:text="트럭마을 아조씨가 열심히 기른 두부입니다."
                    app:layout_constraintTop_toBottomOf="@id/imzTitle"
                    app:layout_constraintLeft_toRightOf="parent"
                    android:textSize="9sp"/>
                <LinearLayout
                    android:orientation="vertical"
                    android:id="@+id/line"
                    android:layout_width="0dp"
                    android:layout_height="0.7dp"
                    android:layout_marginTop="7dp"
                    android:background="@color/md_blue_grey_300"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/imzContent"/>
                <TextView
                    android:id="@+id/p"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/won"
                    android:font='@{"nbg_light"}'
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintBaseline_toBaselineOf="@+id/price"/>
                <TextView
                    android:id="@+id/price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="2,000"
                    android:text="@{zdata.price}"
                    app:layout_constraintBottom_toTopOf="@+id/btnAddCart"
                    app:layout_constraintRight_toLeftOf="@id/p"
                    android:layout_marginRight="7dp"
                    android:layout_marginEnd="7dp"
                    android:textSize="30sp"
                    android:layout_marginBottom="10dp"
                    android:font='@{"nbg_normal"}'
                    />
                <TextView
                    android:text="@string/price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="6dp"
                    android:layout_marginEnd="6dp"
                    android:textColor="@color/colorPrimaryDark"
                    app:layout_constraintBaseline_toBaselineOf="@id/price"
                    app:layout_constraintRight_toLeftOf="@id/price"
                    android:font='@{"nbg_normal"}'/>
                <LinearLayout
                    android:id="@+id/btnAddCart"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_add_cart"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    android:paddingRight="12dp"
                    android:paddingEnd="12dp"
                    android:paddingLeft="9dp"
                    android:paddingStart="9dp"
                    android:paddingTop="7dp"
                    android:paddingBottom="7dp"
                    android:gravity="center">
                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:src="@drawable/ic_add_cart"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/add_on_card"
                        android:textColor="@color/md_white_1000"
                        android:textSize="10sp"/>
                </LinearLayout>
            </android.support.constraint.ConstraintLayout>
        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>
</layout>
